--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
  text-decoration: none;
  list-style: none;
  font-family: sans-serif;
+ color: #062d46;
 }
 /* Para modificar el navbar */
 
@@ -128,4 +129,70 @@ main {
 
 .menu-toggle {
  display: none;
+}
+/* Cards */
+
+.nosotros {
+ margin-top: 1rem;
+ text-align: center;
+}
+
+.cards {
+ margin-top: 1rem;
+ width: 250px;
+ height: 250px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ border: solid 1px #062d46;
+ border-radius: 10px;
+ background-color: var(--background);
+}
+
+.img-v {
+ width: 40px;
+ height: 40px;
+}
+.align-cards {
+ display: flex;
+ justify-content: space-around;
+}
+
+/* contacto */
+.contacto {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ margin-top: 2rem;
+ text-align: center;
+}
+
+.img-cont {
+ width: 30px;
+ height: 30px;
+}
+
+.icon-row {
+ display: flex;
+}
+
+.tel-mail {
+ margin-top: 2rem;
+ border: solid 1px #062d46;
+ border-radius: 10px;
+ background-color: #d6edf3;
+ width: 220px;
+ height: 100px;
+}
+
+footer {
+ margin: 1rem 0 1rem 0;
+ font-size: 0.5rem;
+ text-align: center;
+}
+
+.tel-mail h4 {
+ margin: 0.5rem 0 0.5rem 0;
 }
