--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 800px) {
  /* Menu button y menu toogle */
  .menu-button {
   margin: 0.5rem;
@@ -56,7 +56,9 @@
   justify-content: center;
   align-items: center;
  }
-
+ #hero p {
+  text-align: center;
+ }
  .imagen {
   display: none;
  }
@@ -75,5 +77,22 @@
  .description {
   display: flex;
   justify-content: center;
+ }
+ .align-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+ .contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+ }
+ .nosotros p {
+  margin: 2rem;
+ }
+ .tel-mail {
+  margin-bottom: 2rem;
  }
 }
