--- a/mobile.css
+++ b/mobile.css
@@ -56,6 +56,9 @@
   justify-content: center;
   align-items: center;
  }
+ #hero h1 {
+  text-align: center;
+ }
  #hero p {
   text-align: center;
  }
@@ -65,6 +68,7 @@
  .buttons {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   align-items: center;
  }
